--- a/it/kicad.po
+++ b/it/kicad.po
@@ -81,7 +81,7 @@ msgstr ""
 "Project-Id-Version: KiCad\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-14 15:52+0200\n"
-"PO-Revision-Date: 2017-05-14 15:51+0200\n"
+"PO-Revision-Date: 2017-05-14 16:14+0200\n"
 "Last-Translator: Marco Ciampa <ciampix@libero.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "Language: it\n"
@@ -5529,7 +5529,7 @@ msgstr "Nascondi barra str&umenti microonde"
 #: pcbnew/menubar_pcbframe.cpp:133 pcbnew/tool_pcb.cpp:800
 #: pcbnew/pcbnew_config.cpp:90
 msgid "Show Microwa&ve Toolbar"
-msgstr "Mostra barra strumenti micr&oonde"
+msgstr "Mostra barra str&umenti microonde"
 
 #: pcbnew/menubar_pcbframe.cpp:154 pcbnew/menubar_modedit.cpp:376
 #: eeschema/menubar.cpp:119 eeschema/menubar_libedit.cpp:294
