"Show Datasheet" button: Resolve env-vars (like ${KIPRJMOD}) if appears.
This way, the datasheets can be stored within the project dir, and referred as ${KIPRJMOD}/relative/path/to/datasheet.

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -38,6 +38,8 @@ Chris Pavlina <pavlina.chris[at]gmail-dot-com>
 Simon Richter <Simon.Richter[at]hogyros-dot-de>
 Mario Luzeiro <mrluzeiro[at]ua-dot-pt>
 Mateusz Skowroński <skowri[at]gmail-dot-com>
+Cheng Sheng <chengsheng[at]google-dot-com>
+Google Inc.
 See also CHANGELOG.txt for contributors.
 
 
