--- a/zh_CN/kicad.po
+++ b/zh_CN/kicad.po
@@ -5246,12 +5246,12 @@ msgstr "开始和结束点不能相同。"
 #: pcbnew/dialogs/dialog_graphic_item_properties.cpp:329
 #: pcbnew/dialogs/dialog_graphic_item_properties_for_Modedit.cpp:321
 msgid "The item thickness must be greater than zero."
-msgstr "属性项线宽必须大于0."
+msgstr "此连线的宽度必须大于0."
 
 #: pcbnew/dialogs/dialog_graphic_item_properties.cpp:335
 #: pcbnew/dialogs/dialog_graphic_item_properties_for_Modedit.cpp:327
 msgid "The default thickness must be greater than zero."
-msgstr "默认线宽必须大于0."
+msgstr "全局的默认连线宽度必须大于0."
 
 #: pcbnew/dialogs/dialog_graphic_item_properties.cpp:339
 msgid "Error List"
@@ -5311,11 +5311,11 @@ msgstr "度"
 
 #: pcbnew/dialogs/dialog_graphic_item_properties_base.cpp:100
 msgid "Item thickness:"
-msgstr "属性项线宽:"
+msgstr "此连线的宽度:"
 
 #: pcbnew/dialogs/dialog_graphic_item_properties_base.cpp:111
 msgid "Default thickness:"
-msgstr "默认线宽:"
+msgstr "全局的默认连线宽度:"
 
 #: pcbnew/dialogs/dialog_graphic_item_properties_for_Modedit.cpp:149
 #: pcbnew/dialogs/dialog_graphic_item_properties_for_Modedit.cpp:160
