--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -40,6 +40,8 @@ Mario Luzeiro <mrluzeiro[at]ua-dot-pt>
 Mateusz Skowroński <skowri[at]gmail-dot-com>
 Cheng Sheng <chengsheng[at]google-dot-com> Google Inc.
 Kristoffer Ödmark <kristoffer.odmark90[at]gmail-dot-com>
+Oliver Walters <oliver.henry.walters[at]gmail-dot-com>
+
 See also CHANGELOG.txt for contributors.
 
 
